--- a/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
+++ b/app/src/main/res/layout/fragment_profile_navigation_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileNavigationFragment">
+    tools:context=".Users.ProfileNavigationFragment">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
