--- a/app/src/main/res/layout/findfriend.xml
+++ b/app/src/main/res/layout/findfriend.xml
@@ -6,39 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".FindfriendActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
+
 
     <ImageButton
         android:id="@+id/SearchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar2"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/textInputLayout"
         android:src="@drawable/ic_search_black" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
-        android:layout_width="330dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="4dp"
-        android:layout_below="@id/toolbar2"
-        android:layout_alignParentStart="true"
-
-
-        >
+        android:layout_marginTop="12dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center_horizontal"
+        app:startIconDrawable="@drawable/ic_baseline_person_24">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/SearchText"
-            android:layout_width="341dp"
-            android:layout_height="match_parent" />
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:inputType="textPersonName"
+           />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
