--- a/app/src/main/res/layout/activity_facebook.xml
+++ b/app/src/main/res/layout/activity_facebook.xml
@@ -22,44 +22,50 @@
         android:id="@+id/tv_name"
         android:layout_width="113dp"
         android:layout_height="35dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="108dp"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/iv_profilePic" />
 
     <ImageView
         android:id="@+id/iv_pic"
         android:layout_width="135dp"
         android:layout_height="104dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="76dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_name"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <com.facebook.share.widget.ShareButton
         android:id="@+id/sb_photo"
         android:layout_width="120dp"
         android:layout_height="0dp"
-        android:layout_marginTop="388dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginBottom="19dp"
         android:text="Share photo"
+        app:layout_constraintBottom_toTopOf="@+id/sb_link"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/iv_pic" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="59dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.746" />
+        app:layout_constraintTop_toBottomOf="@+id/sb_link"
+        app:layout_constraintVertical_bias="0.415" />
 
     <com.facebook.share.widget.ShareButton
         android:id="@+id/sb_link"
